tests/codegen/fail/union/enum_non_object_variant.stderr
error[E0277]: the trait bound `Test: GraphQLObject<__S>` is not satisfied
  --> fail/union/enum_non_object_variant.rs:11:10
   |
11 |     Test(Test),
   |          ^^^^ unsatisfied trait bound
   |
help: the trait `GraphQLObject<__S>` is not implemented for `Test`
  --> fail/union/enum_non_object_variant.rs:4:1
   |
 4 | pub enum Test {
   | ^^^^^^^^^^^^^
   = help: the following other types implement trait `GraphQLObject<S>`:
             `&T` implements `GraphQLObject<S>`
             `Arc<T>` implements `GraphQLObject<S>`
             `Argument<S>` implements `GraphQLObject<S>`
             `Box<T>` implements `GraphQLObject<S>`
             `EnumValue` implements `GraphQLObject<__S>`
             `SchemaType<S>` implements `GraphQLObject<S>`
             `juniper::meta::Field<S>` implements `GraphQLObject<S>`
             `juniper::schema::model::DirectiveType<S>` implements `GraphQLObject<S>`
             `juniper::schema::model::TypeType<'a, S>` implements `GraphQLObject<S>`
